--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,9 +15,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "^1.7.1",
     "expo": "~51.0.28",
+    "expo-build-properties": "^0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -30,7 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
